src/objects/OKR__c.object
<CustomObject>
    <description>Objectives Key Results</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Detailed description of the OKR</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OKR_Number__c</fullName>
        <displayFormat>OKR-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>OKR #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <inlineHelpText>The PMD program this OKR relates to.</inlineHelpText>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>Agate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agate Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agate Turbo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ArgonMini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asanti WE/LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlas Peak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlas Peak Refresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banshee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLE Keyring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluefin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluefin IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluestone 2nd Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolt DFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinara LT Dock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinara LT Navigation Dock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinara PTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVX LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elektro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUROPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Everglades Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairhall iDEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falcon Color Doors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falcon Flip Doors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falcon Protective Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fawnridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAVOK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <inlineHelpText>The OKR belongs to this Quarter</inlineHelpText>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>OKR belongs to this year</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>OKR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Quarter__c</columns>
        <columns>OKR_Number__c</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>OKR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OKRs</pluralLabel>
    <recordTypes>
        <fullName>GTM</fullName>
        <active>true</active>
        <description>Go To Market OKRs</description>
        <label>GTM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Procurement</fullName>
        <active>true</active>
        <description>Procurement OKRs</description>
        <label>Procurement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>